# Cellophane

./: Cargo.toml  LICENSE-MIT  README.md
crates/anvil/: Cargo.toml
crates/anvil/src/: chunk.rs  error.rs  lib.rs  region.rs
crates/chat/: Cargo.toml
crates/chat/src/: message.rs
crates/core/: Cargo.toml
crates/core/src/: biome.rs  block.rs  block_pos.rs  block_state.rs  chunk_pos.rs  fluid.rs  lib.rs  packed_array.rs  palette.rs  resource_key.rs  state.rs  volume.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/ident/: Cargo.toml
crates/ident/src/: lib.rs
crates/ident_macros/: Cargo.toml
crates/ident_macros/src/: lib.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: arrays.rs  compound.rs  conv.rs  error.rs  lib.rs  list.rs  ser.rs  serde.rs  tag.rs  value.rs
crates/nbt/src/binary/: decode.rs
crates/nbt/src/serde/: de.rs  ser.rs
crates/network/: Cargo.toml
crates/network/src/: decode.rs  encode.rs  lib.rs
crates/profile/: Cargo.toml
crates/profile/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  io.rs  lib.rs  packets.rs  types.rs  var_int.rs
crates/protocol/src/packets/: client.rs  server.rs
crates/protocol/src/packets/client/: common.rs  configuration.rs  handshake.rs  play.rs
crates/protocol/src/packets/server/: configuration.rs  play.rs
crates/random/: Cargo.toml
crates/random/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: biome_generator.rs  chunk.rs  chunk_generator.rs  chunk_map.rs  chunk_storage.rs  chunk_view.rs  keepalive.rs  lib.rs  player.rs  player_move.rs  world.rs
crates/world/: Cargo.toml
crates/world/src/: biome.rs  chunk.rs  damage.rs  dimension.rs  entity.rs  generation.rs  lib.rs  particle.rs  sound.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: density_function.rs  lib.rs  noise.rs  octave_perlin.rs  perlin.rs  random.rs
examples/: basic_server.rs  nbt.rs
src/: lib.rs
