[package]
name = "cellophanemc_anvil"
description = "Anvil region format of CelophaneMC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
flate2.workspace = true
bitvec.workspace = true
bitfield-struct.workspace = true
cellophanemc_nbt = { workspace = true, features = ["binary", "serde"] }
byteorder.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde.workspace = true
