[package]
name = "cellophanemc_core"
description = "Core components of CellophaneMC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
bitfield-struct = "0.5"
derive_more = { version = "1.0.0-beta.3", features = ["from"] }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
rand = { workspace = true }
glam.workspace = true

[features]
default = ["serde", "serde_json"]
