[package]
name = "cellophanemc_nbt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
byteorder.workspace = true
cesu8.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid = { workspace = true, optional = true }
ryu = "1.0.16"
