[package]
name = "cellophanemc_nbt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
binary = ["dep:byteorder", "dep:cesu8"]

[dependencies]
byteorder = { workspace = true, optional = true }
cesu8 = { workspace = true, optional = true }

thiserror.workspace = true
uuid = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
ryu = "1.0.16"
